--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,9 +11,11 @@ find_package(catkin REQUIRED COMPONENTS
   kdl_parser
   orocos_kdl
   roscpp
+  gazebo_ros
 )
 
 
+find_package(gazebo REQUIRED)
 
 
 
@@ -23,6 +25,7 @@ catkin_package(
 #  LIBRARIES kdl_menzi
 #  CATKIN_DEPENDS kdl_parser orocos_kdl roscpp
 #  DEPENDS system_lib
+#gazebo_ros
 )
 
 ###########
@@ -34,7 +37,20 @@ catkin_package(
 include_directories(
 # include
   ${catkin_INCLUDE_DIRS}
+  ${GAZEBO_INCLUDE_DIRS}
 )
 
-add_executable (kdl_menzi src/kdl_menzi.cpp)
-target_link_libraries (kdl_menzi ${catkin_LIBRARIES} ${kdl_parser_LIBRARIES} ${orocos_kdl_LIBRARIES})
+link_directories(${GAZEBO_LIBRARY_DIRS})
+
+
+#add_executable (kdl_menzi src/kdl_menzi.cpp)
+#target_link_libraries (kdl_menzi ${catkin_LIBRARIES} ${kdl_parser_LIBRARIES} ${orocos_kdl_LIBRARIES})
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${GAZEBO_CXX_FLAGS}")
+
+
+add_executable (kdl_menzi_param src/kdl_menzi_param.cpp)
+target_link_libraries (kdl_menzi_param ${catkin_LIBRARIES} )
+
+#add_executable (contact_pub src/contact_pub.cpp)
+#target_link_libraries (contact_pub ${catkin_LIBRARIES} ${GAZEBO_libraries})
+
