--- a/package.xml
+++ b/package.xml
@@ -52,13 +52,17 @@
   <build_depend>kdl_parser</build_depend>
   <build_depend>orocos_kdl</build_depend>
   <build_depend>roscpp</build_depend>
+
   <build_export_depend>kdl_parser</build_export_depend>
   <build_export_depend>orocos_kdl</build_export_depend>
   <build_export_depend>roscpp</build_export_depend>
+  <build_export_depend>gazebo</build_export_depend>
   <exec_depend>kdl_parser</exec_depend>
   <exec_depend>orocos_kdl</exec_depend>
   <exec_depend>roscpp</exec_depend>
-
+  
+<build_depend>gazebo_ros</build_depend>
+<exec_depend>gazebo_ros</exec_depend>
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
